<resources>
    <string name="app_name">Мракопедия</string>
    <string name="title_activity_category_members">CategoryMembersActivity</string>
    <string name="DEVELOPER_KEY">AIzaSyDMzCENnS1V73PJyY9kRYOXUdtnw2_zVsQ</string>
    <string name="font_size_can_change_key">fontSizeCanChange</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="search_hint">Поиск</string>
    <string name="nothing_found">Ничего не найдено</string>

    <string name="all_categories_drawer">Категории</string>
    <string name="favorite_drawer">Избранное</string>
    <string name="recent_changes_drawer">Новые статьи</string>
    <string name="search_drawer">Поиск</string>
    <string name="settings_drawer">Настройки</string>

    <string name="show_ratings">Сортировать по рейтингу</string>
    <string name="show_alphabetical">Сортировать по имени</string>

    <string name="access_storage_permission_not_granted">Разрешение на сохранение фото не предоставленно. Включите его в настройках.</string>

    <string name="caching_photo_option">Кэшировать фото</string>
    <string name="caching_pages_option">Кэшировать страницы</string>
    <string name="keep_screen_on_option">Не выключать экран при чтении</string>
    <string name="current_color_scheme">Текущая цветовая схема</string>

    <string name="font_size_text">Размер шрифта</string>
    <string name="font_type_text">Тип шрифта</string>
    <string name="color_scheme_text">Цветовая схема</string>
    <string name="color_schemes_text">Цветовая схема</string>
    <string name="create_color_scheme">Создать цветовую схему</string>
    <string name="edit_color_scheme">Редактировать цветовую схему</string>
    <string name="background_color_scheme">Цвет фона</string>
    <string name="text_color_scheme">Цвет текста</string>
    <string name="selected_color_scheme">Цвет выделенного текста</string>
    <string name="link_color_scheme">Цвет ссылок</string>

    <string name="text_was_copied_to_clipboard">Текст скопирован в буфер</string>

    <string name="feedback">Обратная связь</string>
    <string name="feedback_to_developer">Обратная связь с разработчиком</string>
    <string name="feedback_message_must_be_not_empty">Сообщение не может быть пустым</string>
    <string name="feedback_message_is_sending">Отправка сообщения</string>
    <string name="email_client_not_installed">Никаких почтовых клиентов не установлено</string>
    <string name="feedback_description">Вы столкнулись с падением приложения? Страница отображается неправильно? У Вас есть идеи или предложения? Вы можете написать, и всегда получите ответ.</string>
    <string name="feedback_name">Введите Ваше имя</string>
    <string name="feedback_message">Введите Ваше сообщение</string>
    <string name="send">Отправить</string>

    <string name="recent_changes_added">Добавлено</string>

    <string name="in_this_category">в этой категории</string>

    <string name="error_loading_article">Не удалось загрузить статью</string>
    <string name="error_loading_recent_articles">Не удалось загрузить последние статьи</string>
    <string name="error_loading_category">Не удалось загрузить категорию</string>
    <string name="error_loading_categories">Не удалось загрузить список категорий</string>
    <string name="no_internet_text">отсутствует подключение к интернету.</string>

    <string name="no_favorite_error">Вы не добавили в избранное не одной статьи</string>
    <string name="action_share_photo">Поделиться фото</string>
    <string name="action_save_photo">Сохранить фото</string>
    <string name="action_save_scheme">Сохранить схему</string>

    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>

    <string name="press_back_again_to_exit">Нажмите еще раз для выхода</string>

    <string name="nsfw_description">Градус шок-контента в этой истории зашкаливает! Вы предупреждены.</string>
    <string name="anomaly_description">Отдельные материалы этой статьи могут оказать аномальное воздействие, за последствия которого мы ответственности не несём!</string>
    <string name="parody_description">Это пародия на другую историю.</string>
    <string name="save_description">Эта история не редактировалась. Её орфография и пунктуация сохранены в своём первозданном виде.</string>
    <string name="vg_description">Это игровая история. Если вы незнакомы с игрой, участвующей в её сюжете, то рискуете ничего не понять.</string>
    <string name="wtf_description">Описываемые здесь события не поддаются никакой логике. Будьте готовы увидеть по-настоящему странные вещи.</string>
    <string name="favorited_description">Это одна из лучших историй за всё время существования Мракопедии.</string>
    <string name="kgam_description">При копировании этой истории на другие ресурсы просим указывать ссылку на источник, поскольку её авторство, или перевод на русский язык принадлежит участнику Мракопедии.</string>
    <string name="classic_description">Эта история является одним из первооткрывателей жанра крипи.</string>
    <string name="humor_description">В роли страшилки эта история Настолько Плоха, Что Даже Хороша. Хотя она и пытается казаться страшной, её истинная цель отнюдь не в запугивании.</string>
    <string name="so_bad_so_good_description">Эта история Настолько Плоха, Что Даже Хороша. Она претендует на серьёзность, но написана так плохо, что может вызвать лишь смех.</string>
    <string name="title_activity_color_scheme_editor">ColorSchemeEditorActivity</string>
    <string name="title_activity_color_schemes">ColorSchemesActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
</resources>
