<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/listColor"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="?attr/actionBarSize"
        >

        <carbon.widget.RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:clickable="true"
            app:carbon_rippleColor="#333333"
            android:id="@+id/caching_photo_layout"
            >

            <carbon.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:carbon_fontPath="carbon/Roboto-Regular.ttf"
                android:textSize="14sp"
                android:textColor="#D9000000"
                android:text="@string/caching_photo_option"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_centerVertical="true"
                android:id="@+id/caching_photo_text_view"
                />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/caching_photo_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                />

        </carbon.widget.RelativeLayout>

        <carbon.widget.RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:clickable="true"
            app:carbon_rippleColor="#333333"
            android:id="@+id/caching_pages_layout"
            >

            <carbon.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:carbon_fontPath="carbon/Roboto-Regular.ttf"
                android:textSize="14sp"
                android:textColor="#D9000000"
                android:text="@string/caching_pages_option"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_centerVertical="true"
                android:id="@+id/caching_pages_text_view"
                />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/caching_pages_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                />

        </carbon.widget.RelativeLayout>

        <carbon.widget.RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:clickable="true"
            app:carbon_rippleColor="#333333"
            android:id="@+id/keep_screen_on_layout"
            >

            <carbon.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:carbon_fontPath="carbon/Roboto-Regular.ttf"
                android:textSize="14sp"
                android:textColor="#D9000000"
                android:text="@string/keep_screen_on_option"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_centerVertical="true"
                android:id="@+id/keep_screen_on_text_view"
                />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/keep_screen_on_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                />

        </carbon.widget.RelativeLayout>

        <carbon.widget.RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:clickable="true"
            app:carbon_rippleColor="#333333"
            android:id="@+id/current_color_scheme_layout"
            >

            <carbon.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:carbon_fontPath="carbon/Roboto-Regular.ttf"
                android:textSize="14sp"
                android:textColor="#D9000000"
                android:text="@string/current_color_scheme"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_centerVertical="true"
                android:id="@+id/current_color_scheme_text_view"
                />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                >
                <include layout="@layout/color_scheme_view_holder"/>
            </FrameLayout>

        </carbon.widget.RelativeLayout>

        <carbon.widget.RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:clickable="true"
            app:carbon_rippleColor="#333333"
            android:id="@+id/use_scheme_on_all_screens_layout"
            >

            <carbon.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:carbon_fontPath="carbon/Roboto-Regular.ttf"
                android:textSize="14sp"
                android:textColor="#D9000000"
                android:text="@string/use_scheme_on_all_screens_option"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_toLeftOf="@+id/use_scheme_on_all_screens_switch"
                android:layout_toStartOf="@+id/use_scheme_on_all_screens_switch"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/use_scheme_on_all_screens_text_view"
                />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/use_scheme_on_all_screens_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                />

        </carbon.widget.RelativeLayout>

    </LinearLayout>

</ScrollView>